--- a/src/layouts/post.astro
+++ b/src/layouts/post.astro
@@ -233,9 +233,9 @@ if (postIndex < allPosts.length) {
         <script
           src="https://giscus.app/client.js"
           data-repo={SITE.repo}
-          data-repo-id="R_kgDOG4TsQA"
+          data-repo-id="R_kgDOK3kU3w"
           data-category="General"
-          data-category-id="DIC_kwDOG4TsQM4CR4bV"
+          data-category-id="DIC_kwDOK3kU384Cbm4N"
           data-mapping="title"
           data-strict="0"
           data-reactions-enabled="1"
