--- a/src/components/Header/HeaderRight.astro
+++ b/src/components/Header/HeaderRight.astro
@@ -6,12 +6,5 @@ import Search from './Search.astro';
 
 <div style="flex-grow: 1;" class="text-right md:mr-1 -mr-1">
   <Search />
-  <HeaderLink
-    href={`https://github.com/${SITE.githubId}`}
-    target="_blank"
-    class="lg:inline-block hidden">GitHub</HeaderLink
-  >
-  <HeaderLink href="/rss.xml" target="_blank" class="lg:inline-block hidden"
-    >RSS</HeaderLink
-  >
+  <HeaderLink href="/rss.xml" target="_blank" class="lg:inline-block hidden">RSS</HeaderLink>
 </div>
